# directxtktest

./: .gitattributes  .gitignore  CMakeLists.txt  DirectXTK_Tests_Desktop_2010.sln  DirectXTK_Tests_Desktop_2010_DXSDK.sln  DirectXTK_Tests_Desktop_2012.sln  DirectXTK_Tests_Desktop_2012_DXSDK.sln  DirectXTK_Tests_Desktop_2013.sln  DirectXTK_Tests_Desktop_2013_DXSDK.sln  DirectXTK_Tests_Desktop_2015.sln  DirectXTK_Tests_Desktop_2015_DXSDK.sln  DirectXTK_Tests_Desktop_2015_Win10.sln  DirectXTK_Tests_Desktop_2017.sln  DirectXTK_Tests_Desktop_2017_DXSDK.sln  DirectXTK_Tests_Desktop_2017_Win10.sln  DirectXTK_Tests_Desktop_2017_Win7.sln  DirectXTK_Tests_Desktop_2019.sln  DirectXTK_Tests_Desktop_2019_Win10.sln  DirectXTK_Tests_Desktop_2019_Win7.sln  DirectXTK_Tests_Desktop_2022.sln  DirectXTK_Tests_Desktop_2022_Win10.sln  DirectXTK_Tests_Desktop_2022_Win7.sln  DirectXTK_Tests_Windows10.sln  README.md
.github/: copilot-instructions.md
AnimTest/: AnimTest.cpp  AnimTest_Desktop_2010.vcxproj  AnimTest_Desktop_2010.vcxproj.filters  AnimTest_Desktop_2012.vcxproj  AnimTest_Desktop_2012.vcxproj.filters  AnimTest_Desktop_2013.vcxproj  AnimTest_Desktop_2013.vcxproj.filters  AnimTest_Desktop_2015.vcxproj  AnimTest_Desktop_2015.vcxproj.filters  AnimTest_Desktop_2017.vcxproj  AnimTest_Desktop_2017.vcxproj.filters  AnimTest_Desktop_2019.vcxproj  AnimTest_Desktop_2019.vcxproj.filters  AnimTest_Desktop_2022.vcxproj  AnimTest_Windows10.vcxproj  AnimTest_Windows10.vcxproj.filters  AnimTest_XboxOneXDK_2015.sln  AnimTest_XboxOneXDK_2015.vcxproj  AnimTest_XboxOneXDK_2017.sln  AnimTest_XboxOneXDK_2017.vcxproj  AnimTest_XboxOneXDK_2017.vcxproj.filters  Animation.cpp  Animation.h  Game.cpp  Game.h  PackageUWP.appxmanifest  PackageXDK.appxmanifest  ground_norm.dds  pch.h
ApiTest/: ApiTest.cpp  CMakeLists.txt  audio.cpp  bufferhelpers.cpp  commonstates.cpp  directxhelpers.cpp  effects.cpp  graphicsmemory.cpp  loaderhelpers.cpp  model.cpp  postprocess.cpp  primitivebatch.cpp  primitives.cpp  shared.cpp  soundcmn.cpp  sprites.cpp  vertextypes.cpp
Audio3DTest/: Audio3DTest.cpp  Audio3DTest_Desktop_2010_DXSDK.vcxproj  Audio3DTest_Desktop_2010_DXSDK.vcxproj.filters  Audio3DTest_Desktop_2012_DXSDK.vcxproj  Audio3DTest_Desktop_2012_Win8.vcxproj  Audio3DTest_Desktop_2013_DXSDK.vcxproj  Audio3DTest_Desktop_2013_DXSDK.vcxproj.filters  Audio3DTest_Desktop_2013_Win8.vcxproj  Audio3DTest_Desktop_2013_Win8.vcxproj.filters  Audio3DTest_Desktop_2015_DXSDK.vcxproj  Audio3DTest_Desktop_2015_Win10.vcxproj  Audio3DTest_Desktop_2015_Win10.vcxproj.filters  Audio3DTest_Desktop_2015_Win8.vcxproj  Audio3DTest_Desktop_2015_Win8.vcxproj.filters  Audio3DTest_Desktop_2017_DXSDK.vcxproj  Audio3DTest_Desktop_2017_DXSDK.vcxproj.filters  Audio3DTest_Desktop_2017_Win10.vcxproj  Audio3DTest_Desktop_2017_Win7.vcxproj  Audio3DTest_Desktop_2017_Win7.vcxproj.filters  Audio3DTest_Desktop_2017_Win8.vcxproj  Audio3DTest_Desktop_2019_Win10.vcxproj  Audio3DTest_Desktop_2019_Win10.vcxproj.filters  Audio3DTest_Desktop_2019_Win7.vcxproj  Audio3DTest_Desktop_2019_Win7.vcxproj.filters  Audio3DTest_Desktop_2019_Win8.vcxproj  Audio3DTest_Desktop_2022_Win10.vcxproj  Audio3DTest_Desktop_2022_Win7.vcxproj  Audio3DTest_Desktop_2022_Win8.vcxproj  Audio3DTest_Desktop_2022_Win8.vcxproj.filters  Audio3DTest_Windows10.vcxproj  Audio3DTest_Windows10.vcxproj.filters  Audio3DTest_XboxOneXDK_2015.sln  Audio3DTest_XboxOneXDK_2015.vcxproj  Audio3DTest_XboxOneXDK_2015.vcxproj.filters  Audio3DTest_XboxOneXDK_2017.sln  Audio3DTest_XboxOneXDK_2017.vcxproj  Audio3DTest_XboxOneXDK_2017.vcxproj.filters  Game.cpp  Game.h  PackageUWP.appxmanifest  (+3 more)
BasicAudioTest/: BasicAudioTest.cpp  BasicAudioTest_Desktop_2010_DXSDK.vcxproj  BasicAudioTest_Desktop_2012_DXSDK.vcxproj  BasicAudioTest_Desktop_2012_Win8.vcxproj  BasicAudioTest_Desktop_2013_DXSDK.vcxproj  BasicAudioTest_Desktop_2013_Win8.vcxproj  BasicAudioTest_Desktop_2015_DXSDK.vcxproj  BasicAudioTest_Desktop_2015_Win10.vcxproj  BasicAudioTest_Desktop_2015_Win8.vcxproj  BasicAudioTest_Desktop_2015_Win8.vcxproj.filters  BasicAudioTest_Desktop_2017_DXSDK.vcxproj  wavebank.xwb  (+11 more)
HeaderTest/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  audiotest.cpp  bufferhelperstest.cpp  commonstatestest.cpp  ddstextureloadertest.cpp  directxhelperstest.cpp  effectstest.cpp  gamepadtest.cpp  geometricprimitivetest.cpp  graphicsmemorytest.cpp  keyboardtest.cpp  main.cpp  modeltest.cpp  mousetest.cpp  postprocesstest.cpp  primitivebatchtest.cpp  screengrabtest.cpp  simplemathtest.cpp  spritebatchtest.cpp  spritefonttest.cpp  vertextypestest.cpp  wictextureloadertest.cpp
SimpleMathTest/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  SimpleMathStandalone.in  SimpleMathTest.cpp  SimpleMathTest.h  SimpleMathTestCPP17.cpp  SimpleMathTestCPP20.cpp  SimpleMathTestD3D11.cpp  SimpleMathTestD3D12.cpp  SimpleMathTest_Desktop_2010.vcxproj  SimpleMathTest_Desktop_2012.vcxproj  SimpleMathTest_Desktop_2012.vcxproj.filters  SimpleMathTest_Desktop_2013.vcxproj  SimpleMathTest_Desktop_2015.vcxproj  SimpleMathTest_Desktop_2017.vcxproj  SimpleMathTest_Desktop_2019.vcxproj  SimpleMathTest_Desktop_2019.vcxproj.filters  SimpleMathTest_Desktop_2022.vcxproj  SimpleMathTest_Desktop_2022.vcxproj.filters
WavTest/: CMakeLists.txt  WavTest.cpp  invalid-1a8d4bd0-80b3-4545-be3a-5cb46db3364b.xwb  invalid-2c73a6d9-f2ff-4a06-b521-7d8620327732.xwb  invalid-6ff8b467-e048-44f3-9729-bd89dfe228aa.xwb  invalid-727c3544-fcc8-4406-ac5b-29506ba2800c.xwb  invalid-81776bdf-d32b-498f-a320-dfc3222b65e7.xwb  invalid-aeff864b-00b0-41ab-91e1-8d030d890264.xwb  invalid-c55ca8d3-9b15-4b32-a896-1e0a92a055be.xwb  invalid-cc60d138-3248-4d20-804c-b139b2639fcf.xwb  invalid-e86f0aa8-08c6-4293-85f4-2b6fd27de7f3.xwb  invalid-faa0165c-f28c-468c-bc60-449bc6b5af3d.xwb  invalid-fc9e5883-ab13-4e89-8798-b1e47fd44115.xwb  wav.cpp  xwb.cpp
fuzzloaders/: CMakeLists.txt  fuzzloaders.cpp  fuzzloaders_Desktop_2013.vcxproj  fuzzloaders_Desktop_2015.vcxproj  fuzzloaders_Desktop_2017.vcxproj  fuzzloaders_Desktop_2017.vcxproj.filters  fuzzloaders_Desktop_2019.vcxproj  fuzzloaders_Desktop_2022.vcxproj
(+695 files in other folders)
